Fix spacing, the font, and add more media queries

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font-family: 'Ubuntu', sans-serif;
+  font: normal 100%/1.3 Ubuntu, sans-serif;
 }
 
 *, *::before, *::after {
@@ -24,29 +24,111 @@ body {
 
 header {
   background-color: #18294f;
+  color: #fff;
 }
-h1 {
+
+header h1 {
   font-weight: bold;
   color: #fff;
   font-size: 2rem;
   text-align: center;
+  padding: 5px;
+  margin: 0;
 }
 
-ul {
+nav ul {
   text-decoration: none;
   color: #6c8fe0;
   font-size: 1.125rem;
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
-li {
+/* li {
   padding: .3em 0 .5em;
   margin: .9rem;
   text-align: left;
-}
+} */
 
-a {
+nav a {
+  padding: .75rem;
+  text-align: left;
   text-decoration: none;
   color: #6c8fe0;
+  display: block;
+  white-space: nowrap;
+}
+
+nav a:hover {
+  background-color: #6c8fe0;
+  color: #fff;
+}
+
+@media only screen and (min-width: 25em) {
+
+  ul {
+    overflow: hidden;
+  }
+
+  li {
+    float: left;
+    width: 50%;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  nav {
+    text-align: center;
+  }
+
+  li {
+    display: inline-block;
+    float: none;
+    width: auto;
+    padding: 5px;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  header {
+    overflow: hidden;
+  }
+
+  header h1 {
+    text-align: left;
+    float: left;
+  }
+
+  nav li {
+    float: right;
+    width: 25%;
+  }
+
+  nav {
+    float: right;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
 }
